--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:theme="@style/Theme.MAPD713Milestone3"
         tools:targetApi="31">
         <activity
+            android:name=".ListAllPatientsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewPatientInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddPatientActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
